--- a/ExcelMoreScripts/Views/ErrorDetailsWindow.xaml
+++ b/ExcelMoreScripts/Views/ErrorDetailsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ExcelMoreScripts"
         mc:Ignorable="d" d:DataContext="{d:DesignInstance Type=local:ErrorInformation}"
-        Title="Error Details" Height="450" Width="800">
+        Title="{Binding Title, Mode=OneTime}" Height="450" Width="800">
     <Grid Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -20,14 +20,14 @@
             <TextBlock Text="{Binding ErrorStage, Mode=OneTime}" Margin="2"/>
             <TextBlock Text="{Binding Timestamp, Mode=OneTime}" Margin="2"/>
         </StackPanel>
-        <TextBlock Text="{Binding Title, Mode=OneTime}" Margin="2" TextWrapping="Wrap" Grid.Row="1"/>
         <avalonEdit:TextEditor
             xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
             x:Name="TxtCode" Margin="2,2,6,2" Grid.Row="2"
             FontFamily="Consolas" ShowLineNumbers="True"
             SyntaxHighlighting="VB" IsReadOnly="True"
             FontSize="10pt"/>
-        <GridSplitter HorizontalAlignment="Right" Width="4" Grid.RowSpan="3"/>
-        <TextBox Text="{Binding LongInformation, Mode=OneTime}" Margin="2" Grid.Column="1" AcceptsReturn="True" IsReadOnly="True" Grid.Row="2"/>
+        <GridSplitter HorizontalAlignment="Right" Width="4" Grid.Row="2"/>
+        <TextBox Text="{Binding LongInformation, Mode=OneTime}" TextWrapping="Wrap"
+                 Margin="2" Grid.Column="1" AcceptsReturn="True" IsReadOnly="True" Grid.Row="2"/>
     </Grid>
 </Window>
