--- a/ExcelMoreScripts/Views/ErrorWindow.xaml
+++ b/ExcelMoreScripts/Views/ErrorWindow.xaml
@@ -33,10 +33,18 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <TextBlock Text="{Binding ErrorStage,Mode=OneTime}" Background="DarkRed" Foreground="White" Margin="2" Padding="4"/>
-                        <TextBlock Grid.Column="1" Grid.ColumnSpan="2" VerticalAlignment="Center" Text="{Binding Title,Mode=OneTime}" Margin="2"/>
+                        <Grid Grid.Column="1" Grid.ColumnSpan="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center" Text="{Binding Title,Mode=OneTime}" Margin="2" TextTrimming="CharacterEllipsis"/>
+                            <Button Grid.Column="1" Margin="0,2" Padding="12,4" Command="{x:Static local:DismissErrorCommand.Instance}" CommandParameter="{Binding .}">Dismiss</Button>
+                        </Grid>
+                        
                         <TextBlock Grid.Row="1" Text="{Binding Information}" TextWrapping="Wrap" Grid.ColumnSpan="2" Margin="2"/>
                         <Button Grid.Row="1" Grid.Column="2" Padding="12,4" VerticalAlignment="Bottom"
-                            Command="{Binding ViewDetails}" CommandParameter="{Binding .}">View Details</Button>
+                            Command="{x:Static local:ViewErrorDetailsCommand.Instance}" CommandParameter="{Binding .}">View Details</Button>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
